--- a/redpacketlibrary/res/values/em_strings.xml
+++ b/redpacketlibrary/res/values/em_strings.xml
@@ -5,7 +5,7 @@
     <string name="easemob_red_packet">Easemob Red Packet</string>
     <string name="attach_red_packet">Red Packet</string>
     <string name="attach_transfer_money">Transfer</string>
-    <string name="change">Change</string>
+    <string name="rp_record">Red Packet Record</string>
     <string name="exclusive_red_packet">Exclusive Red Packet</string>
     <string name="easemob_transfer_packet">[Transfer]Transfer%1$syuan</string>
     <string name="easemob_transfer_msg_sent">Your money transfer has been received</string>
