--- a/redpacketlibrary/res/values-zh/em_strings.xml
+++ b/redpacketlibrary/res/values-zh/em_strings.xml
@@ -5,7 +5,7 @@
     <string name="easemob_red_packet">环信红包</string>
     <string name="attach_red_packet">红包</string>
     <string name="attach_transfer_money">转账</string>
-    <string name="rp_record">红包记录</string>
+    <string name="change">零钱</string>
     <string name="exclusive_red_packet">专属红包</string>
     <string name="easemob_transfer_packet">[转账]转账%1$s元</string>
     <string name="easemob_transfer_msg_sent">对方已收到转账</string>
