--- a/res/values/em_strings.xml
+++ b/res/values/em_strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
+
     <string name="app_name">Hyphenate Demo</string>
     <string name="app_slogon">IM as a service</string>
     <string name="text_ack_msg">Read</string>
@@ -150,7 +150,7 @@
     <string name="refuse_join_group">refuse join group:</string>
     <string name="at_your_in_group">%s @ you in group chat</string>
     <string name="emojicon_test_name">Test</string>
-    
+
     <string name="not_add_myself">"Can't add yourself"</string>
     <string name="This_user_is_already_your_friend">This user is already your friend</string>
     <string name="Add_a_friend">Let me to be your friend!</string>
@@ -290,17 +290,17 @@
     <string name="Is_download_voice_click_later">Downloading the voice message, click later</string>
     <string name="Send_the_following_pictures">Send the following pictures?</string>
     <string name="search_new">Search</string>
-    
+
     <string name="Delete_the_contact">Delete the contact</string>
     <string name="Move_into_the_blacklist_new">Move into the blacklist</string>
     <string name="Change_the_group_name">Change group name</string>
     <string name="change_the_group_description">Change group description</string>
     <string name="Sync_Groups_From_Server">Sync groups with server</string>
-    
+
     <string name="update_contact_list">Update contact list</string>
     <string name="update_black_list">Update black list</string>
     <string name="update_groups">Update groups</string>
-    
+
     <string name="update_contact_list_failed">Update contact list failed</string>
     <string name="update_black_list_failed">Update black list failed</string>
     <string name="update_groups_failed">Update groups failed</string>
@@ -347,7 +347,7 @@
     <string name="group_nick">Group Nickname:</string>
     <string name="group_owner">Group Owner:</string>
     <string name="user_removed_from_group">You are removed from the group</string>
-    
+
     <string name="network_unstable">Network unstable</string>
     <string name="no_call_data">No call data</string>
 
@@ -374,4 +374,12 @@
     <string name="Failed_to_create_chat_room">Failed to create chat room</string>
 
     <string name="mail_log_title">Send mail, contain logs</string>
+    <!--红包相关-->
+    <string name="msg_take_red_packet">You got your own Red Packet</string>
+    <string name="msg_take_someone_red_packet">You got Red Packet from %1$s</string>
+    <string name="msg_someone_take_red_packet">%1$s got your Red Packet</string>
+    <string name="easemob_red_packet">Easemob Red Packet</string>
+    <string name="attach_red_packet">Red Packet</string>
+    <string name="red_packet_record">Red Packet Records</string>
+    <string name="exclusive_red_packet">Exclusive Red Packet</string>
 </resources>
